# ChangeLog for dev-db/mariadb
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-db/mariadb/ChangeLog,v 1.61 2014/10/16 10:58:59 ago Exp $

  16 Oct 2014; Agostino Sarubbo <ago@gentoo.org> mariadb-5.5.40.ebuild:
  Stable for x86, wrt bug #525504

  16 Oct 2014; Agostino Sarubbo <ago@gentoo.org> mariadb-5.5.40.ebuild:
  Stable for amd64, wrt bug #525504

  15 Oct 2014; Brian Evans <grknight@gentoo.org> -mariadb-10.0.12.ebuild:
  Drop old

*mariadb-5.5.40 (09 Oct 2014)

  09 Oct 2014; Brian Evans <grknight@gentoo.org> +mariadb-5.5.40.ebuild:
  Version bump on 5.5 series

  08 Oct 2014; Brian Evans <grknight@gentoo.org> +files/my.cnf-5.6:
  Add new 5.6 configs to better match upstream wrt bug 524768

  06 Oct 2014; Brian Evans <grknight@gentoo.org> mariadb-10.0.14.ebuild,
  mariadb-5.5.39.ebuild:
  Update test data locations wrt bug 524158

  02 Oct 2014; Brian Evans <grknight@gentoo.org> mariadb-10.0.12.ebuild,
  mariadb-10.0.14.ebuild, mariadb-5.5.39.ebuild:
  Cleanup test data wrt bug 524158

*mariadb-10.0.14 (26 Sep 2014)

  26 Sep 2014; Brian Evans <grknight@gentoo.org> +mariadb-10.0.14.ebuild,
  -mariadb-10.0.13.ebuild:
  Version bump; remove old

  21 Sep 2014; Brian Evans <grknight@gentoo.org> -mariadb-5.2.14.ebuild,
  -mariadb-5.3.12.ebuild, metadata.xml:
  Remove old mariadb versions and virtuals

  21 Aug 2014; Brian Evans <grknight@gentoo.org> -mariadb-5.1.67.ebuild:
  Remove old 5.1 that has been masked for a long time

  17 Aug 2014; Jeroen Roovers <jer@gentoo.org> mariadb-5.5.39.ebuild,
  mariadb-10.0.13.ebuild:
  Bump patchset by grknight (bug #520092). Stable for HPPA.

  17 Aug 2014; Jeroen Roovers <jer@gentoo.org> mariadb-5.5.39.ebuild,
  mariadb-10.0.12.ebuild, mariadb-10.0.13.ebuild:
  Drop HPPA keywording until bug #520092 is fixed.

  16 Aug 2014; Jeroen Roovers <jer@gentoo.org> mariadb-5.5.39.ebuild,
  mariadb-10.0.12.ebuild, mariadb-10.0.13.ebuild:
  Stable for HPPA too.
