@@ -12,23 +12,15 @@ DIST mysql-extras-20140924-1913Z.tar.bz2 1494659 SHA256 958114bbe5fe21220f27b478
 DIST mysql-extras-20141009-1450Z.tar.bz2 1493940 SHA256 e19856db9b48305eaa61241ec0dd15d185feb8fd3400a29d5e52f72230dcb62f SHA512 5052ce06e72468058894cc8a8b6f5af668c92ccfa79801ae2fcb05f52f3a1d2e5d2776905952378b94e5ef5096c5e9d59a9efa0979f968770cd85a332df418cd WHIRLPOOL d997bfc7188560e53a7d534299b2631517e601028defb538a7c4108b2170328239497c8c849af2cc5e4994517b3bb2ee0cd595d173089074b002468b46effc3d
 EBUILD mariadb-10.0.14.ebuild 3961 SHA256 fe748747cbfdfceefb74150a1e48164669ec07589d61d11b0eb75955559a023b SHA512 e3bdef97ec5f54bd2471e62960228933a5c19fbde0d0326f586b2326ed3793dee6cf892f6d5b17f15f9925339158d186080839f16c1f7a4227484b03cf3b07fd WHIRLPOOL a3bb18d10a297ff2c8da10980c2b7c62018778ba7589413adb7f3d7098be9f79242d0ab4d827928062fb3faf144aa9fb3bc47d6228071e002eaf3a6e10e69ffa
 EBUILD mariadb-5.5.39.ebuild 3929 SHA256 efe94a248bf2b54429ab492f9d85c811676785a87fb0f291992f03278e8752c0 SHA512 16fe762c96bec6f60238539349e5f932814851918f0eaa8423c75386845a6211024e007978099f102bbe848e5b3e0f7dca7161a335294e498aa902f2fec0f6ca WHIRLPOOL c66df1b41774a19d98811a8e8b3b453029f1bc66c95f178ff2df289d2852cb0b74cdc975041f33a01fd18cc51270ccd60482e13ac748a8a8adf6fb4844f3d329
-EBUILD mariadb-5.5.40.ebuild 4137 SHA256 515425cc0125ce47a61a069d763d852cd45ac7cdefffdb44741c990145f18f79 SHA512 36118e00f79972b8695f951838028b60b4c22c3afa35283d97db3ca0430704bcc1071c42ec07c4e04c5400da5d5d2990f1bcca3b32c6a4520e9671b012b72e41 WHIRLPOOL 617e5ecab57178d181d14459d70504c81c7cbd17519a09dfb8393a2645a3c417092e4be21a57dc112b465ef139e99f1ec1248b489dcd686c67bd9e453a1561ed
-MISC ChangeLog 11231 SHA256 023fc9c8364fd477fdb69ced35d76f9dbd0d1302af02c8422faf68637ad6f179 SHA512 c0c715d7141309240ee11f4bb5c67d0cf07cf60642fafbf2627ce985caad7e3d6bcd4693a6ba2466b221a89f1468fb87a7a90b27627d702f2c0ebe7e4ddfc97f WHIRLPOOL 79c4073d2ccdadd307cec3f502f71973c868f0706653ed15b603aa07a4b7d2dac3398da1171559e70e18819c7b49a95b285e9ee30821b092c4fdf1cfd3b60dbe
+EBUILD mariadb-5.5.40.ebuild 4141 SHA256 e747a9ff6d2e916b43cdc16fc324d7e25a56302b8169be93ab3005e8ea39ba40 SHA512 74225cd5bf47baffd62701e51ef9df8d50c72eab33760a6e4543ba961bcb56ddb1e061f17acf447f999e0d8489a6a3cde8ad68ec2c4f9f48623326ff9bc7adad WHIRLPOOL 5a6e9fbcaa43716c1e214d2fcce85069cfbd109ae4d1df3fa2b5a79f28847f82c346b31f8171f5cc139a4f3458e8c8e3aebc93abdb8655f86bdf020d4797b19a
+MISC ChangeLog 11344 SHA256 a45b882f80942756dca061610e32de3778afdedb56a1a7ba66ff60c2f68192f7 SHA512 ce58e0650bdf7338ecaf9cbd44bc1ec0b8ae67951ff47f7d5a09ef7bc0603a6ac51d4911e38456f1a2121e0667ab479bee7f6d1b37111cb008da311f41ad7c8e WHIRLPOOL c538b135280ee817b895f151467f48335b3848cf27529a5029bb47a888e61d0f8dc1148ecdc7039fd3e862688bdcff735bf048523a2c66d55ce5b71d63436d0c
 MISC metadata.xml 1415 SHA256 430ec7d576a92391d07ab1da50ded0e5f1344398b883bfc9e1ff5c49697d7bba SHA512 2e6623f94ec3be8458b6404d2e7c3908e654bef176ee56f8fe99dd0367e97890023dc4912179cb04bb4f7d69ad738f0946c6ef7830b6a6b2f6d449244332380d WHIRLPOOL 05ae047384acaee2245dbd39a4d810172e89e4fefd1276c0db1022154eb4c1273d24d1e8f773928f21a29bbdaa86fcc86e27de4a24f7692f917156290f322b35
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2
+Version: GnuPG v2.0
 
-iQIcBAEBCAAGBQJUP6T0AAoJELp701BxlEWfw6IQAJ1VAKdk7R9AicsuMnFzLsrQ
-R1vWz8VKp5ZW2QLaT28mImnjBgS2B9OtjxCMIqUTes7k3uXkjE8v3UNZJTBe9M1P
-Ws2P4/yhQ9vOVh/e7AtpT+ZBGddT9RdZed0LZ0ouhHijXr2iavZrVRcuqU/8dDkV
-BFmLQrErHN0kVTx6rjf/CabF7WcjpyZfNSZkKWMJsc+4P9BpDdb/DvBKRVvqV5v2
-4VUVRzeBGQX1Awa9ehIXGbKP6L7MTLTWl0CUWcEi8jPzkob4HzXj9EwYaFemR7p8
-BxKwn/SV/+3sReTvgOEtMRcWc6h+JUmxM8y14GILjJVARQWh1HMLwjAqM3UQQXKn
-dQeXE6AZxOfsXxghWnEY6prwCbQhv1BL8pWB6mesxBBGG+WAMfKJ2PMGiCK5zvyw
-hMuHnlynEfiMlmtnLbNgceu8WhvUEEBa4YbUWdWpTE1+Q3zXXGYrBWKR6TT84i3K
-55RhiTlxvwX7+hv5mGKz5uFFikN6EZlxQ8WReSlksJgd8/4BenYAdP1YWSN1ikUm
-prBs6pzdW83xV8Ps1JV6d4VKtqY2Ty+11NdqWTvnFH/bkPkHJuqnH3QfghpAuyAp
-/cn/aC7l3XqqQRPlU6L3QBZVJ/yvxweRXBH3Kh0U//zTHV7RNBpkGD5hl4XZlTUe
-rKdl8qW3c0TwyzzOaWy2
-=Pmuu
+iKYEAREIAGYFAlQ/4MtfFIAAAAAALgAoaXNzdWVyLWZwckBub3RhdGlvbnMub3Bl
+bnBncC5maWZ0aGhvcnNlbWFuLm5ldDFGNDg1MzU4NjMzRTAyNzA3RkY0ODA1QzAz
+RUUwM0ExQ0U1RDU0RTgACgkQA+4Doc5dVOi3nQCeNlFO6hPzrsCFW5EIwvlehXe4
+Dh4An0i5iwPHMze8/nwugcv0zAnxDRop
+=gQas
 -----END PGP SIGNATURE-----
