@@ -17,25 +17,17 @@ DIST percona-xtradb-1.0.6-10.tar.gz 1676716 SHA256 e3aa818f13cf669412e59ad194eae
 EBUILD mysql-5.1.70.ebuild 8874 SHA256 abd74f2cf58e5c8d4544c2dee89c8b30174b038aba91f3b45138cc299d8013b7 SHA512 303ee2ff791852dcab8d72a73e06b7f5e1fe0bd48b6e71730013c601eba412cebacb09cc76d06075f4e63b0eae80947a2bf9eb42da24d412b5c66d69d9aeb4c4 WHIRLPOOL 20d542a938589b3fefc738e64f5d9f9596faa1f1dad0175b144adc096d7354390eb6c4aed873dec9687e08483cba47fac56c786829c2ffbbb22e04ecea2b867a
 EBUILD mysql-5.1.73-r1.ebuild 8892 SHA256 a3f57db069a9d7eab793820178c0367ddeb912b604560db3a55553c9787cf230 SHA512 ebf6f4f196362b7623c6ee9b336e23ca94a67a32da4f389e4f49c9f44c1dc2b1c6e482de90e3afe1cfbf1edbcfbba02331ea4506cc5bc66fc2fed2624b9defd8 WHIRLPOOL c917e39875832571fdcdd5c37c58548c4bc25434b313b0dcbe569d0551b265ec3d2cf1811fbcbbac62213faa1de4855284769a2add53dc889e6998e76464e736
 EBUILD mysql-5.5.39.ebuild 4595 SHA256 5008452dda4183033da27924fa0e7368039990ecb25c1176136f42a0167929f6 SHA512 a451dbf6cb8b6452cb749bb3c9d070732d6453f406c6aec992a41f7a3d9aef4d8c8016c664823dcbd917264fc36d4da27c44bc740e399b87c93c925e7d273fff WHIRLPOOL d6696ffaffe4379407c41d217ff6efbef4d5b907bd20721d2d4fcede3b2e7821b483dc66a918752b44f92af8c66aea2345ee3c8114ad27242acf8021e335a641
-EBUILD mysql-5.5.40.ebuild 4076 SHA256 84b25d7657176fb7de0b1a35ed5825f5470e1570fb6f3191c774c33649d1aa45 SHA512 52ed6408f80bf02edd100a68635983fb851077a30de1008951a8544b02ae29f4c7d0692462b96212df50f8587b6bd05c373a29d93a555f439e07dedcfac1085c WHIRLPOOL ca89b153094122a0a89875714de1ee152aa8e2c565bf13139054b15fcc1facb60b5d662748d4c3375e2f9a492f7f7962eda2e19ffe8c987c9b2a563193fd14d5
+EBUILD mysql-5.5.40.ebuild 4080 SHA256 1db9f88334e54d9953d1d09e985945cd56ba9b947d650f8790fe8037f2604f81 SHA512 94d4ec78028c1d2733aed6028abb0be6ce9b045ada6982ebed825bcc14650aa1abd348780c248e2afc43edebfedd209fc87bb9d8aca2bde1eb2cdba4a796b228 WHIRLPOOL bc5b8f30d1a1b7b0053764df7ff2a9e89d4932fa995ad9458f53596c79cce66b2cb99b31dffe9323445e422bb42e0c3035e1a4e90b9598b268827e3cd59d199f
 EBUILD mysql-5.6.21.ebuild 4844 SHA256 9fdc2efb9ee4e44df4cab040c352b3a79012596a844c5ecf4c3f05bf1050f4ea SHA512 a13492621323af32962eb33196908a6e643da855eb8dd3c630607b6d91d0c84189e02c0d44bcdbd30e1bd213e4bdbb0f02ef8a659d9fbdbab2d8419ebcb97ef2 WHIRLPOOL d74968b35af00c2f9fec80ca617004b4b27fb981c727d8e6b5051857657676504a74b03ac7c21f12c01656b31671f756ed847be467aa2499de5170ce6c4de4c1
-MISC ChangeLog 20879 SHA256 cfc51c43b7df56007a01454bc97460136a7d9dfe115dbd040162b8d331eab2c9 SHA512 6002fa1968ffc1ed149a2c46fad5b5726f52d63a7f82c016977c9b2d7c2462213f366345cc72131e0bdd8397ca3e5813f54a1e5c57caef98b37a36cfab212b95 WHIRLPOOL de7f663e883e5ef4b7767dfd6621105ab18d0216c96d8b84fd689ea8da99f47c07954958c91ccb112056d7c26e3360206cc6db40019826b84251f4c456130746
+MISC ChangeLog 20990 SHA256 149603bb868c767790c3c570f12678e9255507219c596391bfa8317947c01728 SHA512 f58470f0bba8b1efbae97b56aae78b299b7178bfdc8b4d46fca36b188fb809c633ba4385f31c692428b891b3d6dcbae246d26b2d12bd99d4a6142c1bbd1b2294 WHIRLPOOL 83764b136f31597862f0562b362850e9a6f801df4986352a810921ddd6678115dd0b29832d48313fcd769cdf1ed2b105ef1ab0848b85902a7634b1ccb7d497e3
 MISC ChangeLog-2010 108404 SHA256 93dda53b8871d9040e6aebb59f095a8debd5c0a9437e78e5e949989e209ba5cd SHA512 5f54b7c2e25d27680a9313da2450851118e34a57202d9f36f59da52834ca3b587701d93868d71bf684ddc253d49f87837c8d7e2d442f2955dfde8a701150fbe5 WHIRLPOOL 55f758942e3012aa0ae7d529c2f8b6e0d8f4d7cbde09039f16cd05f0a58fc4e3e09ccd50e366effdcaab4641300eb0f494ddbe3a35a645ced8a9d747d80e9821
 MISC metadata.xml 1440 SHA256 57b1430c744bb21c4f99b885b92c1ca27efec6757e06f51bc043e25737a226b5 SHA512 0a8f4cc67b3dee66b95c16edcb0c1dd70b95b199f7cd46ba4b509a9f52dbb7d45ed2da4280ed8ba93d96521f66fc80d486de91f0a23ff3e0baee48795e5151fa WHIRLPOOL d747dccd7d8ae91fd60c5c074a3d1f0ab64a96f8ec09658a36e42546d17cbd9644de45527ed1bc6babeb7329c666ecc01cea7283dc4640268ed5cd2ca045172b
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2
+Version: GnuPG v2.0
 
-iQIcBAEBCAAGBQJUP6TwAAoJELp701BxlEWfQewP/3qRPSXnOv2LdLKqkIg1W2m0
-kk+e1u2gYL3gMachGgPneu8zpGiaizwgG57g9oU0PWbSjGNvMONU7BeAXtA6TO9K
-nZVqBHNLKdRDfmRdOuru/GzGtyvc//cDuqp/eeY3/DLY2DIC+MDfBkGjLdM3RPmc
-KGBUkA/xXjBclNOnCXgAxfxZDgJLHwAeJRjBvTulMrsrD6N7cFfbDZfi6AqmhQ+N
-Io0ECuFLysaxYJBm5+/FStpziga4+XBRmAb1Qq3qne0PqEhBSLKS4w/IBLmM7vqG
-m4NylTHTZbenPYaH8WX9SQ9HZMmlycb/05Es2sJ3S11o9Y+KrosCnQ887lPbfZCP
-WGd/Vdm1TPAcamEN3FAt1DAgr2/FF955iu6tRCqTkDWjJP6LYFhxgbMFHYahya9e
-VLxI2jtFnN2hQsP8dLfIZj1i3cpcNm5RC1uznz+CBJ4t79YzwL65GoShPMrANCKW
-kvR4dxcsiA+SCgBgi3OCDBxn6VoewTWDlRmdYtjbe+zf4gi0QMrqEje0+52aYWiI
-uG1pnMpHuIiRy6YANMKC4a0T6tePPehDFVN4VO26VopQHNRfOeJL52AgNXq+CdZ1
-9rTrREmnPqp3yugoB9QzE9swOv/vXSY0FOQZMhKaAQTsfyXkI4mC17cKnM+keVGe
-w0Z013uVV8qN5RTN4QGh
-=OoJm
+iKYEAREIAGYFAlQ/4L5fFIAAAAAALgAoaXNzdWVyLWZwckBub3RhdGlvbnMub3Bl
+bnBncC5maWZ0aGhvcnNlbWFuLm5ldDFGNDg1MzU4NjMzRTAyNzA3RkY0ODA1QzAz
+RUUwM0ExQ0U1RDU0RTgACgkQA+4Doc5dVOjT1ACePSiDna+wUSk1iMzD+QjBE610
+JZsAmQGev3XBbB/Y9jhFJCkDdlVMXJaR
+=2K5v
 -----END PGP SIGNATURE-----
