@@ -1,6 +1,9 @@
 # ChangeLog for dev-db/mysql
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/mysql/ChangeLog,v 1.698 2014/10/16 10:58:55 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/mysql/ChangeLog,v 1.699 2014/10/16 15:13:58 klausman Exp $
+
+  16 Oct 2014; Tobias Klausmann <klausman@gentoo.org> mysql-5.5.40.ebuild:
+  Stable on alpha, bug 525504
 
   16 Oct 2014; Agostino Sarubbo <ago@gentoo.org> mysql-5.5.40.ebuild:
   Stable for x86, wrt bug #525504
